<resources>

    <string name="app_name">জপ মালা</string>

    <string name="rada_krishna">Rada_krishna</string>

    <!-- mantras -->

    <string name="rk">মালা জপের পূ্র্বের মন্ত্র :</string>
    <string name="srikrishna">‘‘ শ্রীকৃষ্ণ চৈতন্য প্রভু নিত্যানন্দ শ্রী অদ্বৈত গদাধর শ্রীবাসাদি গৌর ভক্তবৃন্দ। ’’ </string>

    <string name="nam"> অষ্টসখীর নাম :</string>
    <string name="as">১। ললিতা ২। বিশাখা ৩। সুচিএা ৪। চম্পকলতা ৫। রঙ্গঁদেবী ৬। ইন্দুরেখা ৭। তুঙ্গঁবিদ্যা ৮। সুদেবী ।</string>

    <string name="title">শ্রী হরিনাম মহামন্ত্র :</string>
    <string name="hare_krishna">‘‘ হরে কৃষ্ণ হরে কৃষ্ণ কৃষ্ণ কৃষ্ণ হরে হরে হরে রাম হরে রাম রাম রাম হরে হরে। ’’ </string>

    <string name="end">শ্রী শ্রী হরিনাম জপ সমাপনের মন্ত্র :</string>
    <string name="end_to">‘‘ শ্রী হরিনাম মহাযজ্ঞ কলৌ পাপবিনাশনং শ্রীকৃষ্ণ চৈতন্য প্রীত্যার্থে শ্রী হরিনাম জপ সমাপন। ” </string>

    <!-- mantras -->


    <!-- mantras counter -->

    <string name="akan">এখান থেকে জপ শুরু করুন।</string>
    <string name="_0">0</string>
    <string name="addone">১ বার সর্ম্পূণ</string>
    <!--<string name="lessone">১ বার অসর্ম্পূণ</string> -->
    <string name="reset">পুর্ণরায় শুরু</string>

    <string name="stage1">১ম ধাপ :</string>
    <string name="stage2">২য় ধাপ :</string>
    <string name="stage3">৩য় ধাপ :</string>

    <string name="bar108">এখানে ১০৮ বার জপ করিবেন ।</string>
    <string name="bar16">এখানে ১৬ বার গননা করিবেন ।</string>
    <string name="bar4"> এখানে ৪ বার গননা করিবেন ।</string>

    <!-- mantras counter -->


    <!-- MainActivity2 -->

    <string name="number1">১। মালা জপের পূর্বে নিচের মন্ত্রটি ৪ বার বলতে হবে।</string>
    <string name="number2">২। মন্ত্রটি জপ করার পর অষ্টসখীর নাম নিয়ে মালা জপ শুরু করতে হবে।</string>
    <string name="number3">৩। প্রতিবার হরিনাম জপ করার পর এই (১ বার সর্ম্পূন্ন) বাটনে ক্লিক করুন। এইভাবে যতবার হরিনাম জপ করবেন ততবার এই বাটনে ক্লিক করবেন।</string>
    <!--<string name="number4">৪। যদি ভুল করে (১ বার সর্ম্পূন্ন) বাটনে ডাবল ক্লিক করেন। তাহলে (১ বার অসর্ম্পূন্ন) বাটনে ক্লিক করে ভুল সংশোধন করে নিতে পারবেন।</string> -->
    <string name="number4">৪। যদি ১০৮ বার বা ১৬ বার বা ৪ বার গননা করা সর্ম্পূন্ন হয় তাহলে ( পুর্ণরায় শুরু ) বাটনে ক্লিক করে আবার গননা শুরু করতে পারবেন।</string>
    <string name="number5">৫। ১ম ধাপে ১০৮ বার হরিনাম জপ করবেন।</string>
    <string name="number6">৬। ১ম ধাপে ১০৮ বার জপ করা শেষ হলে (২য় ধাপে) ১ বার গননা করবেন। এইভাবে ২য় ধাপে ১৬ বার গননা করবেন।</string>
    <string name="number7">৭। ২য় ধাপে ১৬ বার গননা করা শেষ হলে (৩য় ধাপে) ১ বার গননা করবেন। এই ভাবে ৪ বার গননা করবেন।</string>
    <string name="number8">৮। মালা জপ সর্ম্পূন্ন হলে এই মন্ত্র পাঠ করে মালা জপ শেষ করবেন।</string>

    <!-- MainActivity2 -->


    <!-- MainActivity3 -->
    <string name="question1">১। মালা জপ করা সবার কর্তব্য কেন ?</string>
    <string name="Answer1">শ্রী গৌরাঙ্গ মহাপ্রভু তার ভক্তগণকে তার শ্রীমুখে আজ্ঞা করিলেন, প্রতিদিন ১ লক্ষ নাম জপ করিবে। প্রতিদিন ১ লক্ষ নাম যিনি জপ করেন, তার মনের বাঞ্ছা পূর্ণ করেন ভগবান। নামবিনে কলিকালে আর কোন ধর্ম নাই, শাস্ত্রে বলা হয়েছে শ্রী হরিনাম মহামন্ত্র হলো সব মন্ত্রের সার। হরিনাম জপ করিলে সব পাপ ক্ষয় হয়, এই নামেই জীবের মোক্ষ লাভ হয়। তাই সবার হরিনাম জপ করা কর্তব্য।</string>

    <string name="question2">২। মালা জপ করিলে কেন তার হিসাব রাখতে হয় ?</string>
    <string name="Answer2">কলিযুগে শ্রীমন মহাপ্রভু তার ভক্ত ও বৈষ্ণবদের সংখ্যা রক্ষণ সম্বন্ধে নির্দেশ দিয়েছেন। যদি মালা জপ করে তার সংখ্যা গননা না করা হয় তাহলে সে জপের কোন ফল পাওয়া যায় না ।</string>

    <string name="question3">৩। মানব জন্ম এতো দুর্লব কেন ?</string>
    <string name="Answer3">২০ লক্ষ বার গাছ রুপে। ৯ লক্ষ বার জলের প্রানী রুপে। ১১ লক্ষ বার কৃমি কিট রুপে। ১০ লক্ষ বার পক্ষী রুপে। ৩০ লক্ষ বার পশু রুপে। ৪ লক্ষ বার বানর রুপে। মোট ৮৪ লক্ষ বার জন্মের পর আমরা ১ টি মানব জন্ম পাই । তাই মানব জন্ম খুব দুর্লব ।তাই আমাদের এই জন্ম-মৃত্যুর চক্র থেকে বের হতে হলে সর্বদা হরিনাম জপ করতে হবে ।</string>

    <string name="question4">৪। আমাদের প্রতিদিন কতবার মালা জপ করা উচিত ?</string>
    <string name="Answer4">মালা ১০৮ বার জপ করিলে ১ ফিরান হয়। এইরুপ ৪ ফিরানে ১ গ্রন্থি হয় এবং ১৬ গ্রন্থিতে ১ লক্ষ নাম পূর্ন হয়। এইভাবে ৪ বার x ১৬ বার = ৬৪ বার । ৬৪ বার জপ করিলে ১ লক্ষ নাম পূর্ন হয় । শ্রীমন মহাপ্রভু সমস্ত ভক্তগণকে ১ লক্ষ নাম জপের আদেশ দিয়েছেন ।</string>

    <string name="question5">৫। কখন আমাদের মালা জপ করা উচিত ?</string>
    <string name="Answer5">মালা জপের সঠিক সময় হচ্ছে স্নান করার পর। স্নান এরপর আমাদের শরীর ও মন পবিএ থাকে। শরীর ও মন পবিএ থাকার ফলে ভগবানের প্রতি আমাদের ভক্তি জাগ্রত হয়।</string>

    <string name="question6">৬। কিভাবে শ্রী শ্রী হরনিাম জপের মালা শুদ্বি করতে হয় ?</string>
    <string name="Answer6">শ্রী শ্রী হরিনাম জপের ১০৮ টি মালা। সর্ব প্রথম পঞ্চগব্য ও মন্ত্র দ্বারা শুদ্ব করিবে। তারপর জপের মালা ভগবান শ্রী রাধাকৃষ্ণের চরনে ছুয়িয়ে মালার আধারীতে / থলিতে রেখে মালা জপ করিবে । পঞ্চগব্য তৈরির বিধি : “ দই , দুধ , ঘি , গরুর গোবর ও চেনা ”।</string>

    <!-- MainActivity3 -->

    <!-- Advantage of jopa -->

    <string name="ques1">১। সনাতন ধর্মে মালা জপ করা হয় কেন ?</string>
    <string name="ans1">মালা জপে ঈশ্বরের নাম বা মন্ত্রের পুনরাবৃওির মাধ্যমে পরমাত্মার সঙ্গে আত্মিক সংযোগ স্থাপন করে। এটি ভক্তির এক রুপ, যা আত্মা এবং পরমাত্মার মিলনের পথ তৈরি করে। প্রতিদিন মালা জপ করলে জীবনে আধ্যাত্মিক এবং মানসিক উন্নতি ঘটে।</string>

    <string name="ques2">২। মানব জন্ম এতো দুর্লব কেন ?</string>
    <string name="ans2">২০ লক্ষ বার গাছ রুপে। ৯ লক্ষ বার জলের প্রানী রুপে। ১১ লক্ষ বার কৃমি কিট রুপে। ১০ লক্ষ বার পক্ষী রুপে। ৩০ লক্ষ বার পশু রুপে। ৪ লক্ষ বার বানর রুপে। মোট ৮৪ লক্ষ বার জন্মের পর আমরা ১ টি মানব জন্ম পাই । তাই মানব জন্ম খুব দুর্লব ।তাই আমাদের এই জন্ম-মৃত্যুর চক্র থেকে বের হতে হলে সর্বদা মালা জপ করতে হবে।</string>

    <!-- Advantage of jopa -->


    <!-- Others information -->

    <string name="app_info_normal_text">আমরা অ্যাপ এর মধ্যে নিয়মিত আপডেট দিই এবং প্রতিটি আপডেটে নতুন নতুন ফিচার যুক্ত করি। আমাদের অ্যাপ ব্যবহার করতে যদি কোনো প্রকার সমস্যা হয় তবে দয়া করে আমাদের জানান। আমরা আপনার সমস্যা সমাধানের যথাসাধ্য চেষ্টা করবো।</string>
    <string name="app_info_bold_text">ধন্যবাদ আমাদের অ্যাপ ব্যবহার করার জন্য</string>

    <!-- Others information -->


    <!-- 2 Button -->
    <string name="rules_of_jopa">জপের নিয়ম</string>
    <string name="japa_descri">জপের কারন</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- 2 Button -->

</resources>