<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@color/color4"
    >

    <include layout="@layout/backappbar"
        android:id="@+id/backbar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backbar"
        >

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1"
                android:textSize="20sp"
                android:textColor="@color/color9"
                android:textStyle="bold"
                android:layout_margin="15dp"
                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer1"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:textStyle="normal"
                android:layout_margin="15dp"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2"
                android:textSize="20sp"
                android:textColor="@color/color9"
                android:textStyle="bold"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer2"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3"
                android:textSize="20sp"
                android:textColor="@color/color9"
                android:textStyle="bold"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer3"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4"
                android:textSize="20sp"
                android:textColor="@color/color9"
                android:textStyle="bold"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer4"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:textSize="20sp"
                android:textColor="@color/color9"
                android:textStyle="bold"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Answer5"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:textStyle="normal"
                android:gravity="center"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question6"
                android:textSize="20sp"
                android:textColor="@color/color9"
                android:textStyle="bold"
                android:layout_margin="15dp"
                />

            <TextView
                android:id="@+id/t12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/Answer6"
                android:textColor="@color/color10"
                android:textStyle="normal"
                android:textSize="20sp"
                 />


            <View
                android:layout_width="40dp"
                android:layout_height="40dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>