<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/SCREEN"

    >

    <include layout="@layout/appbar"
        android:id="@+id/top"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:src="@drawable/img1"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/rada_krishna"
                    />

                <include layout="@layout/button"
                    />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/rk"
                    style="@style/Text_italic"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/srikrishna"
                    android:textSize="20sp"
                    style="@style/button_text_color"
                    android:textStyle="bold"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/nam"
                    style="@style/Text_italic"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/as"
                    android:textSize="20sp"
                    style="@style/button_text_color"
                    android:textStyle="bold"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textSize="20sp"
                    style="@style/Text_italic"
                    android:textStyle="normal"
                    android:layout_margin="15dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hare_krishna"
                    android:textSize="20sp"
                    style="@style/button_text_color"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/akan"
                    android:textSize="20sp"
                    style="@style/Text_italic"
                    android:textStyle="normal"
                    android:layout_margin="15dp"
                    />

                <include layout="@layout/jopa" />




                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textSize="20sp"
                    style="@style/Text_italic"
                    android:textStyle="normal"
                    android:layout_margin="15dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/end_to"
                    android:textSize="20sp"
                    style="@style/button_text_color"
                    android:textStyle="bold"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    />
            </LinearLayout>

    </ScrollView>


</RelativeLayout>