<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Boisnob_mala"
    android:background="@color/color4"

    >

    <include layout="@layout/backappbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/back_bar"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/back_bar"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <include layout="@layout/add_img"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="5dp"
                android:text="@string/rk"
                android:textColor="@color/color9"
                android:fontFamily="@font/noto_serif_bengali"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/srikrishna"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:fontFamily="@font/noto_serif_bengali"
                android:textStyle="bold"
                android:layout_margin="15dp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/nam"
                android:textColor="@color/color9"
                android:fontFamily="@font/noto_serif_bengali"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="@font/noto_serif_bengali"
                android:gravity="center"
                android:text="@string/as"
                android:textColor="@color/color10"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp"
                android:textColor="@color/color9"
                android:fontFamily="@font/noto_serif_bengali"
                android:textStyle="normal"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hare_krishna"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:fontFamily="@font/noto_serif_bengali"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="15dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/akan"
                android:textSize="18sp"
                android:fontFamily="@font/noto_serif_bengali"
                android:textColor="@color/color9"
                android:textStyle="normal"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                />

            <include layout="@layout/jopa" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textSize="18sp"
                android:fontFamily="@font/noto_serif_bengali"
                android:textColor="@color/color9"
                android:textStyle="normal"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginStart="15dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_to"
                android:textSize="20sp"
                android:textColor="@color/color10"
                android:textStyle="bold"
                android:fontFamily="@font/noto_serif_bengali"
                android:layout_margin="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="27dp"/>

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ib_rules"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/law"
        android:background="@drawable/custom_fab"
        android:elevation="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:tooltipText="জপের নিয়ম"

        />


</RelativeLayout>